debug add circos

--- a/snpScore/plot/circos.conf
+++ b/snpScore/plot/circos.conf
@@ -180,9 +180,24 @@ chromosomes                = chr1A;chr1B;chr1D;chr2A;chr2B;chr2D;chr3A;chr3B;chr
 <<include /data/scripts/circos/ticks.conf>>
 
 <image>
-<<include etc/image.conf>>
 dir  = {{circos_path}}
 file = {{circos_file}}       
+
+png   = yes
+svg   = yes
+
+# radius of inscribed circle in image
+radius         = 1500p
+#
+# # by default angle=0 is at 3 o'clock position
+angle_offset      = -90
+#
+# #angle_orientation = counterclockwise
+#
+auto_alpha_colors = yes
+auto_alpha_steps  = 5
+
+background = white
 </image>
 
 <<include etc/colors_fonts_patterns.conf>> 
